Fix issue where paging control could get 5-way focus unintentionally (seen in collapsing header sample). moon.Scroller now has a spotlightPagingControls property which defaults to false. Enyo-DCO-1.1-Signed-off-by: Kevin Schaaf kevin.schaaf@lge.com

--- a/css/moonstone.css
+++ b/css/moonstone.css
@@ -1312,6 +1312,9 @@
 .moon-icon-button.moon-paging-button.left {
   left: 0px;
 }
+.moon-icon-button.moon-paging-button.hover:hover {
+  background-color: #ffb80d;
+}
 /* Icon.css */
 .moon-icon,
 .moon-icon-toggle {
